--- a/demo1/todos.html
+++ b/demo1/todos.html
@@ -8,7 +8,7 @@
     <script type="module" src="todo.js"></script>
 </head>
 <body>
-    <h1>My TODOs list</h1>
+    <h1>My TODOs list!</h1>
     <div>
         <label for="todo-input">New Todo</label>
         <input type="text" id="todo-input" placeholder="Enter text here"/>
